--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 # Sample .travis.yml for R projects
 
-language: r
-warnings_are_errors: true
+
+language: R
 sudo: required
+warnings_are_errors: true
