--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ldatuning
 Type: Package
-Title: Tuning of the LDA models parameters
+Title: Tuning of the LDA Models Parameters
 Description: For this first version only metrics to estimate the best fitting
     number of topics are implemented.
 Version: 0.0.9000
