--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ language: r
 sudo: required
 warnings_are_errors: true
 
+before_install:
+ - echo "options(repos = c(CRAN='http://cran.rstudio.com'))" >> ~/.Rprofile
+
+apt_packages:
+ - curl
+ - libcurl4-openssl-dev
+
 r_binary_packages:
  - topicmodels
  - rmpfr
