Change description to distinct LDA

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: ldatuning
 Type: Package
-Title: Tuning of the LDA Models Parameters
+Title: Tuning of the Latent Dirichlet allocation (LDA) models prameters
 Description: For this first version only metrics to estimate the best fitting
     number of topics are implemented.
-Version: 0.1.0
+Version: 0.1.9000
 Date: 2015-09-16
 Authors@R: person("Murzintcev", "Nikita", email = "nikita@lreis.ac.cn",
                   role = c("aut", "cre"))
